<resources>
    <string name="app_name">timezer0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>


    <string name="login">Saisir votre Email </string>
    <string name="password">Entrer votre Mot de Pass </string>
    <string name="welcom">Bonjour dans Notre Application </string>


    <string name="today"> Aujourd\'hui </string>
    <string name="list_all"> tous les taches </string>
    <string name="projects">mes projects </string>
    <string name="freinds"> Mes amis </string>
    <string name="title_activity_navig">NavigActivity</string>


    <string name="server_client_id">847557355350-t2fs7edjul4tnntppdr5h1i8f1h5o513.apps.googleusercontent.com</string>
</resources>
