<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/md_white_1000"
    >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"



        android:padding="24dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="79dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/amadeuslogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:text="@string/app_name"
            android:background="@color/md_white_1000"
            android:textAllCaps="true"
            android:textColor="@color/md_black_1000"
            android:textSize="16sp" />

        <!-- Snippet from "Add text fields" section goes here. -->

        <!-- Snippet from "Add buttons" section goes here. -->


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textColorHint="@color/md_purple_500"

            android:background="@color/md_white_1000"
            android:hint="@string/login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtemail2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent"
                android:textColor="@color/md_purple_800"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textColorHint="@color/md_purple_500"
            android:background="@color/md_white_1000"
            android:hint="@string/password"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtpassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent"
                android:textColor="@color/md_purple_800"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkboxadmin2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textColor="@color/md_purple_800"
            android:text="Rester connecté" />

        <TextView
            android:id="@+id/oubliermotpas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:drawableLeft="@drawable/ic_security_black_24dp"
            android:textColor="@color/md_purple_800"
            android:text=" Oublier mot pass"

            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnlogin2"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="95dp"
                android:layout_height="47dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:text="Login" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_toStartOf="@id/btnlogin2"
                android:layout_toLeftOf="@id/btnlogin2"
                android:text="sign" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="300dp"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnlogingoogle"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="95dp"
                android:visibility="gone"
                android:layout_height="47dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:text="google" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_button_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                />


        </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>